[project]
name = "cart-abandonment-rl-env"
version = "0.1.0"
description = "RL environment for cart abandonment"
authors = [{ name = "Shiven Bansal" }]

dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
  "requests",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"
